[gd_scene load_steps=6 format=2]

[ext_resource path="res://EditorTheme/ExpandableSectionButtonHeader.tres" type="Theme" id=1]
[ext_resource path="res://Icons/Editor/GUITreeArrowRight.svg" type="Texture" id=2]
[ext_resource path="res://EditorTheme/LabelExpandTreeSectionTitle.tres" type="StyleBox" id=3]
[ext_resource path="res://SceneComponents/Inspector/MeshInfoPanel.gd" type="Script" id=4]

[sub_resource type="StyleBoxEmpty" id=1]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0

[node name="MeshInfoPanel" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExpandButton" type="Button" parent="."]
margin_right = 1024.0
margin_bottom = 22.0
theme = ExtResource( 1 )
toggle_mode = true
text = "Mesh"
icon = ExtResource( 2 )
align = 0

[node name="ExpandSection" type="PanelContainer" parent="."]
margin_top = 22.0
margin_right = 1024.0
margin_bottom = 118.0
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="ExpandSection"]
margin_left = 4.0
margin_right = 1020.0
margin_bottom = 92.0
custom_constants/separation = 0

[node name="MeshNameLabel" type="Label" parent="ExpandSection/VBoxContainer"]
margin_right = 1016.0
margin_bottom = 24.0
custom_styles/normal = ExtResource( 3 )
text = "Mesh Name"

[node name="MeshNameDisplay" type="LineEdit" parent="ExpandSection/VBoxContainer"]
margin_top = 24.0
margin_right = 1016.0
margin_bottom = 46.0
custom_constants/minimum_spaces = 0
editable = false

[node name="AssetPathLabel" type="Label" parent="ExpandSection/VBoxContainer"]
margin_top = 46.0
margin_right = 1016.0
margin_bottom = 70.0
custom_styles/normal = ExtResource( 3 )
text = "Asset Path"

[node name="AssetPathDisplay" type="LineEdit" parent="ExpandSection/VBoxContainer"]
margin_top = 70.0
margin_right = 1016.0
margin_bottom = 92.0
custom_constants/minimum_spaces = 0
editable = false
